# RiskTacticalSimulator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/risk_simulator/: __init__.py
src/risk_simulator/agent/: __init__.py  react_agent.py  tools.py
src/risk_simulator/cli/: __init__.py  populate.py  run_agent.py
src/risk_simulator/core/: __init__.py  entities.py  monte_carlo.py  ports.py  round_resolver.py  use_cases.py
src/risk_simulator/database/: __init__.py  sqlite_repository.py
tests/unit/: test_monte_carlo.py  test_round_resolver.py  test_simulate_battle.py  test_sqlite_repository.py
