[project]
name = "risk-tactical-simulator"
version = "0.1.0"
description = "Motor de simulacion tactica de combate basado en las reglas del Risk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
