[project]
name = "risk-simulator"
version = "0.1.0"
description = "Motor de simulacion tactica de combate basado en las reglas del Risk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.scripts]
populate-db = "risk_simulator.cli.populate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

